Etape 6, modifier page du menu délice des sens et style du tag Nouveau

--- a/Restaurants/menu_le_delice_des_sens.html
+++ b/Restaurants/menu_le_delice_des_sens.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Menu - La palette du gout </title>
+    <title>Menu - Le délice des sens</title>
     <link rel="icon" type="image/svg+xml" href="../Assets/Images_et_textes_Ohmyfood/images/logo/ohmyfood@2x.svg">
     <link rel="stylesheet" href="../sass/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +28,7 @@
             <img src="../Assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image une assiette gastronomique">
         </div>
         <section class="menu">
-            <h1 class="menu__title">La palette du goût</h1>
+            <h1 class="menu__title">Le délice des sens</h1>
             <div class="menu__heart">
                 <i class="fa-regular fa-heart"></i>
                 <i class="fa-solid fa-heart"></i>
@@ -37,9 +37,9 @@
                 <h2 class="menu__card__text"><span>ENTR</span>EES</h2>
                 <div class="menu__card__starter">
                     <div class="menu__card__content">
-                        <h3 class="menu__card_content_title">Fricassée d'escargots</h3>
+                        <h3 class="menu__card_content_title">Tartare de thon</h3>
                         <div class="menu__card__content__text">
-                            <p class="menu__card__content__text__subtitle">Au piment d'Espelette</p>
+                            <p class="menu__card__content__text__subtitle">Assaisonné au yuzu</p>
                             <p class="menu__card__content__text__price">25 €</p>
                             <div class="menu__card__content__checkbox">
                                 <i class="fa-regular fa-circle-check"></i>
@@ -49,9 +49,9 @@
                 </div>
                 <div class="menu__card__starter">
                     <div class="menu__card__content">
-                        <h3 class="menu__card__content__title">Foie gras de canard mi-cuit</h3>
+                        <h3 class="menu__card__content__title">Bouchée de homard croustillant</h3>
                         <div class="menu__card__content__text">
-                            <p class="menu__card__content__text__subtitle">Et ses copeaux de truffe noire</p>
+                            <p class="menu__card__content__text__subtitle">Et sa farandole de petits légumes</p>
                             <p class="menu__card__content__text__price">35 €</p>
                             <div class="menu__card__content__checkbox">
                                 <i class="fa-regular fa-circle-check"></i>
@@ -61,9 +61,9 @@
                 </div>
                 <div class="menu__card__starter">
                     <div class="menu__card__content">
-                        <h3 class="menu__card__content__title">Oeuf au plat</h3>
+                        <h3 class="menu__card__content__title">Velouté de cèpes</h3>
                         <div class="menu__card__content__text">
-                            <p class="menu__card__content__text__subtitle">Assaisonné à la truffe sur lit de caviar</p>
+                            <p class="menu__card__content__text__subtitle">Aux truffes</p>
                             <p class="menu__card__content__text__price">20 €</p>
                             <div class="menu__card__content__checkbox">
                                 <i class="fa-regular fa-circle-check"></i>
@@ -76,9 +76,9 @@
                 <h2 class="menu__card__text"><span>PLAT</span>S</h2>
                 <div class="menu__card__dish">
                     <div class="menu__card__content">
-                        <h3 class="menu__card__content__title">Filet de boeuf aux herbes</h3>
+                        <h3 class="menu__card__content__title">Poulet rôti aux herbes de Provence</h3>
                         <div class="menu__card__content__text">
-                            <p class="menu__card__content__text__subtitle">Accompagné de sa ribambelle de légumes</p>
+                            <p class="menu__card__content__text__subtitle">Et sa crème de truffe</p>
                             <p class="menu__card__content__text__price">40 €</p>
                             <div class="menu__card__content__checkbox">
                                 <i class="fa-regular fa-circle-check"></i>
@@ -88,9 +88,9 @@
                 </div>
                 <div class="menu__card__dish">
                     <div class="menu__card__content">
-                        <h3 class="menu__card__content__title">Parmentier de queue de boeuf</h3>
+                        <h3 class="menu__card__content__title">Langouste rôtie</h3>
                         <div class="menu__card__content__text">
-                            <p class="menu__card__content__text__subtitle">À la truffe noire sur sa purée de panais</p>
+                            <p class="menu__card__content__text__subtitle">Et ses légumes de saison</p>
                             <p class="menu__card__content__text__price">35 €</p>
                             <div class="menu__card__content__checkbox">
                                 <i class="fa-regular fa-circle-check"></i>
@@ -100,9 +100,9 @@
                 </div>
                 <div class="menu__card__dish">
                     <div class="menu__card__content">
-                        <h3 class="menu__card__content__title">Filet de turbot</h3>
+                        <h3 class="menu__card__content__title">Côte de bœuf Angus</h3>
                         <div class="menu__card__content__text">
-                            <p class="menu__card__content__text__subtitle">Aux agrumes</p>
+                            <p class="menu__card__content__text__subtitle">Et sa purée de panais</p>
                             <p class="menu__card__content__text__price">44 €</p>
                             <div class="menu__card__content__checkbox">
                                 <i class="fa-regular fa-circle-check"></i>
@@ -115,9 +115,9 @@
                 <h2 class="menu__card__text"><span>DESS</span>ERTS</h2>
                 <div class="menu__card__dessert">
                     <div class="menu__card__content">
-                        <h3 class="menu__card__content__title">Paris-Brest</h3>
+                        <h3 class="menu__card__content__title">Farandole de desserts</h3>
                         <div class="menu__card__content__text">
-                            <p class="menu__card__content__text__subtitle">Revisité</p>
+                            <p class="menu__card__content__text__subtitle">Du chef</p>
                             <p class="menu__card__content__text__price">18 €</p>
                             <div class="menu__card__content__checkbox">
                                 <i class="fa-regular fa-circle-check"></i>
@@ -127,9 +127,9 @@
                 </div>
                 <div class="menu__card__dessert">
                     <div class="menu__card__content">
-                         <h3 class="menu__card__content__title">Macaron au chocolat d'exception</h3>
+                         <h3 class="menu__card__content__title">Crème brulée</h3>
                          <div class="menu__card__content__text">
-                            <p class="menu__card__content__text__subtitle">Et glace à la vanille de Madagascar</p>
+                            <p class="menu__card__content__text__subtitle">Revisitée</p>
                             <p class="menu__card__content__text__price">22 €</p>
                             <div class="menu__card__content__checkbox">
                                 <i class="fa-regular fa-circle-check"></i>
@@ -139,9 +139,9 @@
                 </div>
                 <div class="menu__card__dessert">
                     <div class="menu__card__content">
-                        <h3 class="menu__card__content__title">Mousse au chocolat</h3>
+                        <h3 class="menu__card__content__title">Tiramisu</h3>
                         <div class="menu__card__content__text">
-                            <p class="menu__card__content__text__subtitle">Au piment d'Espelette et à la truffe noire</p>
+                            <p class="menu__card__content__text__subtitle">À la noisette</p>
                             <p class="menu__card__content__text__price">23 €</p>
                             <div class="menu__card__content__checkbox">
                                 <i class="fa-regular fa-circle-check"></i>
@@ -195,43 +195,3 @@
     </footer>
 </body>
 </html>
-Le délice des sens
-
-Entrées
-Tartare de thon
-Assaisonné au yuzu
-25€
-
-Bouchée de homard croustillant 
-Et sa farandole de petits légumes
-35€
-
-Velouté de cèpes 
-Aux truffes
-20€
-        
-Plats
-Poulet rôti aux herbes de Provence 
-Et sa crème de truffe
-40€
-
-Langouste rôtie 
-Et ses légumes de saison
-35€
-
-Côte de bœuf Angus 
-Et sa purée de panais
-44€
-
-Desserts
-Farandole de desserts
-Du chef
-18€
-
-Crème brulée 
-Revisitée
-22€
-
-Tiramisu 
-À la noisette
-23€
