--- a/index.html
+++ b/index.html
@@ -36,21 +36,22 @@
 
         <section class="filter">
             <h2 class="filter__title">Fonctionnement</h2>
-            <div></div>
-            <div class="filter__content">
-                <p>1</p>
-                <i class="fa-solid fa-mobile-screen-button"></i>
-                <h3>Choisissez un restaurant</h3>
-            </div>
-            <div class="filter__content">
-                <p>2</p>
-                <i class="fa-solid fa-list-ul"></i>
-                <h3>Composez votre menu</h3>
-            </div>
-            <div class="filter__content">
-                <p>3</p>
-                <i class="fa-solid fa-store"></i>
-                <h3>Dégustez au restaurant</h3>
+            <div class="filter__desktop">
+                <div class="filter__content">
+                    <p>1</p>
+                    <i class="fa-solid fa-mobile-screen-button"></i>
+                    <h3>Choisissez un restaurant</h3>
+                </div>
+                <div class="filter__content">
+                    <p>2</p>
+                    <i class="fa-solid fa-list-ul"></i>
+                    <h3>Composez votre menu</h3>
+                </div>
+                <div class="filter__content">
+                    <p>3</p>
+                    <i class="fa-solid fa-store"></i>
+                    <h3>Dégustez au restaurant</h3>
+                </div>
             </div>
         </section>
 
